# fastsolv

./: .gitignore  README.md  chemprop_optimal.json  chemprop_train.sh  exploration.ipynb  model.py  prepare_data.py  solprop_boobier.py  temperature_gradients.ipynb  temperature_gradients_distribution_analysis.ipynb
.github/workflows/: ci.yml
data/: boobier.py  bsd.py  features.slurm  krasnov.py  llompart.py  utils.py  vermeire.py
fastsolv/: README.md  demo.csv  demo.ipynb  pyproject.toml
fastsolv/fastsolv/: __init__.py  _classes.py  _cli.py  _module.py
fastsolv/test/: test_fastsolv.py
fastsolv_web/: README.md  fastsolv_web.py
fastsolv_web/templates/: index.html
figures/: aleatoric_limit.ipynb  challenging.ipynb  error_analysis.ipynb  figure_1.ipynb  figure_2.ipynb  figure_3.ipynb  figure_4.ipynb  parity_blowup.ipynb  solprop_extrapolation.ipynb
models/baseline/: baseline.py
models/chemprop/: chemprop_train.sh  test.py  train.py
models/fastprop/: classes.py  hopt.py  test.py  train.py
models/fastprop_custom/: aleatoric_error_study.py  data.py  hopt.py  hopt.slurm  hopt_custom.slurm  hopt_fastprop_sobolev.slurm  hopt_plain.slurm  hopt_regularized.slurm  model.py  run_one.py  test.py  test.slurm  train.py  train.slurm
models/fastprop_plain/: highsol_train.yml
paper/: README.md  __init__.py  _solprop.py  paper.bib  paper.md  proposal.md  sobolev_demo.ipynb
paper/analysis/: __init__.py  anthracenes_predict.ipynb  appendix_B.ipynb  chemplot_projection.ipynb  error_analysis.ipynb  error_analysis_leeds.ipynb  error_analysis_solprop.ipynb  figure_2.ipynb  (+7 more)
(+29 files in other folders)
